crates/biome_html_parser/tests/html_specs/error/svelte/await_duplicate_then.svelte
{#await promise}
  <p>Loading...</p>
{:then value}
  <p>{value}</p>
{:then anotherValue}
  <p>{anotherValue}</p>
{/await}
